--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </div>
   <div class="jogadores"></div>
   <script src="script.js"></script>
+  <script src="./js/fireworks.js"></script>
 </body>
 
 </html>
