--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Georama:ital,wght@1,500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Lig-4</title>
   </head>
@@ -14,6 +20,17 @@
       <div class="container"></div>
     </div>
     <div class="jogadores"></div>
+    <div class="btn"><img src="img/exclamacao.png" alt="" /></div>
+    <div class="glass">
+      <h2>Instruções de como jogar</h2>
+      <h3>Clique no tabuleiro para adicionar as peças</h3>
+      <span>Primeiro jogador será do time do Fluminense</span>
+      <span>Segundo Jogador será do time do Flamengo</span>
+      <p>
+        Junte 4 peças com o mesmo escudo utilizando estratégia e agilidade.
+        Parece simples, mas não é. Só jogando você testa suas habilidades.
+      </p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
