--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         Parece simples, mas não é. Só jogando você testa suas habilidades.
       </p>
     </div>
+    <div class="cronometro"></div>
     <script src="script.js"></script>
   </body>
 </html>
