Entrega do botão mudo

--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
   </head>
 
   <body>
-    <h1>Lig-4</h1>
+    <header>
+      <div class="audio"></div>
+
+      <h1>Lig-4</h1>
+      <div class="btn"><img src="img/exclamacao.png" alt="" /></div>
+    </header>
     <div class="jogo">
       <div class="container"></div>
     </div>
     <div class="jogadores"></div>
-    <div class="btn"><img src="img/exclamacao.png" alt="" /></div>
     <div class="glass">
       <h2>Instruções de como jogar</h2>
       <h3>Clique no tabuleiro para adicionar as peças</h3>
