correção no nome do jogo

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Lig-4</title>
+    <title>Deslig-4</title>
   </head>
 
   <body>
     <header>
       <div class="audio"></div>
-      <h1>Lig-4</h1>
+      <h1>Deslig-4</h1>
       <div class="btn"><img src="./assets/img/exclamacao.png" alt="" /></div>
     </header>
 
